# fishplayer

./: CMakeLists.txt  LICENSE  README  config.h.cmake
src/: CMakeLists.txt  about.h
